--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,14 @@
     <string name="delivered_to">Delivered to</string>
     <string name="jalan_depok_timur">Jalan Depok Timur</string>
     <string name="you_might_looking_for">You might looking for</string>
+    <string name="text_btn_add_to_cart">Add to cart</string>
+    <string name="hint_name">Name</string>
+    <string name="text_name">Hermas</string>
+    <string name="text_hint_username">Username</string>
+    <string name="text_username">hermas.yuda</string>
+    <string name="text_hint_email">Email</string>
+    <string name="text_email">hermas.yuda@gmail.com</string>
+    <string name="text_edit">Edit</string>
+    <string name="text_save">Save</string>
+
 </resources>
