--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,8 @@
     <string name="text_checkout">Checkout</string>
     <string name="text_total_price">Total Price</string>
     <string name="text_title_your_cart">Your Cart</string>
+    <string name="text_add_to_cart_success">Add to cart Success</string>
+    <string name="add_to_cart_failed">Add to cart failed</string>
+    <string name="loading">Loading</string>
 
 </resources>
