--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,17 @@
     <string name="text_add_to_cart_success">Add to cart Success</string>
     <string name="add_to_cart_failed">Add to cart failed</string>
     <string name="loading">Loading</string>
+    <string name="text_title_order_confirmation">Order Confirmation</string>
+    <string name="text_delivery_method">Delivery Method</string>
+    <string name="text_pick_up">Pick Up</string>
+    <string name="text_delivery">Delivery</string>
+    <string name="text_payment_method">Payment Method</string>
+    <string name="text_cash">Cash</string>
+    <string name="text_e_wallet">E-Wallet</string>
+    <string name="text_cart_is_empty">Cart is Empty</string>
+    <string name="shopping_summary">Shopping summary</string>
+    <string name="total_quantity">x%s</string>
+
+
 
 </resources>
