Finishing FD 3 Chapter 5

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,18 @@
     <string name="text_cart_is_empty">Cart is Empty</string>
     <string name="shopping_summary">Shopping summary</string>
     <string name="total_quantity">x%s</string>
-
+    <string name="error_checkout">Error Checkout</string>
+    <string name="create_order_success">Create order Success</string>
+    <string name="close">Close</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 
 
 </resources>
