--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,9 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="error_when_getting_the_data_please_try_again_later">Error when getting the data, Please try again later !</string>
+    <string name="text_empty_data">Empty Result</string>
 
 
 </resources>
